# TermHarvest

./: CRUSH.md  README.md  aquacrop_manager.py  config.nix  explore_aquacrop.py  flake.nix  fs.tcss  main.py  pyproject.toml  test_aquacrop_integration.py
