[project]
name = "spaceapps-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aquacrop>=3.0.11",
    "duckdb>=1.4.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "polars>=1.34.0",
    "requests>=2.32.5",
]
